# EvoCodeKB

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  draft.md  main.py  pyproject.toml
config/: config.json
docs/: REFACTORING.md  retrieval_implementation.md
evokb/: __init__.py  cli.py  knowledgebase.py
evokb/config/: __init__.py  manager.py
evokb/fingerprint/: __init__.py  comment_generator.py  text_generator.py  tree_generator.py
evokb/io/: __init__.py  file_processor.py  importer.py
evokb/parsing/: __init__.py  classifier.py  names.py  (+5 more)
scripts/: build_sample_db.sh  build_train_2gram.sh  build_train_kb.sh  calibrate_generation_baseline.py  demo_database.py  eval_reference_generation.py  eval_reference_ppl.py  kill_reference_generation_run.sh  kill_reference_ppl_run.sh  merge_reference_generation_results.py  merge_reference_ppl_results.py  rescore_reference_generation_run.sh  retrieve_2gram.py  retrieve_input.py  run_reference_generation_gpu.sh  run_reference_ppl_gpu.sh  sample_100.jsonl  status_reference_generation_run.sh  status_reference_ppl_run.sh  watch_reference_generation_logs.sh  watch_reference_ppl_logs.sh
test/: README.md  run_all_tests.py  test_basic_integration.py  test_cli_integration.py  test_comment_fingerprint_generator.py  test_config_manager.py  test_database.py  test_file_processor.py  test_fingerprint_tree_generator.py  test_importer.py  test_information_retrieval.py  test_knowledge_retrieval.py  test_models.py  test_parser.py  test_retrieval_integration.py  test_search_engine.py  test_syntax_checker.py  test_text_fingerprint_generator.py
(+51 files in other folders)
